# urlShorterApi

./: .env  .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  settings.py
core/: db.py
db/models/: url.py
migrations/: env.py
migrations/versions/: 35b23a190052_added_url_table.py
routers/: url.py
scheme/: __init__.py
