[tool.poetry]
name = "someapi"
version = "0.1.0"
description = ""
authors = ["betensis <betensis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
ormar = { extras = ["postgresql"], version = "^0.11.0" }
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
